--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # CUDA Version: 12.2
 # Ubuntu 20.04.6
 # python 3.10.13
-
-loguru==0.7.2
+pyyaml==6.0.2
+numpy==1.26.4
+loguru==0.7.3
 requests==2.32.3
