--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@
 pyyaml==6.0.2
 numpy==1.26.4
 loguru==0.7.3
+
+# 네트워크 요청 및 데이터 처리
+requests==2.31.0
+pandas==1.5.3
+
+# 보안 관련
+cryptography==41.0.5
+
+# 로깅
+logging==0.5.1.2
