--- a/config/config_sg.yaml
+++ b/config/config_sg.yaml
@@ -54,9 +54,11 @@ sg_LLM:
         ## **3. 마케팅용 3줄 문장 생성 (출력 형식 반영)**
         위의 기준을 만족하는 **3줄로 이루어진 하나의 완결된 문구**를 생성하세요.
 
-        ✔ **첫 번째 문장:** 강렬한 시작 (예: 충격적 사건, 강한 감정 표현)
-        ✔ **두 번째 문장:** 핵심 갈등 강조 (예: 결정적 순간, 주요 사건 묘사)
-        ✔ **세 번째 문장:** 감정적 여운 & 새로운 결심 (예: 주인공의 변화, 다짐, 궁금증 유발)
+        ✔ **첫 번째 줄:** 강렬한 시작 (예: 충격적 사건, 강한 감정 표현)
+        ✔ **두 번째 줄:** 핵심 갈등 강조 (예: 결정적 순간, 주요 사건 묘사)
+        ✔ **세 번째 줄:** 감정적 여운 & 새로운 결심 (예: 주인공의 변화, 다짐, 궁금증 유발)
+
+        ---
 
         ## **4. 자체 평가 후 수정 (검토 및 최적화)**
         생성된 문장이 다음 평가 기준에서 **최대한 높은 점수(각 10점 만점)** 를 받을 수 있도록 평가하고, 필요하면 수정하세요.
@@ -87,7 +89,7 @@ sg_LLM:
       role: user
       content: >
         출력 형식:
-        다음의 정보를 바탕으로 마케팅용 문장을 작성하세요.
+        다음의 정보를 바탕으로 문장을 작성하세요.
         원문: {original_text}
         생성된 문장: {}
 
@@ -95,7 +97,7 @@ sg_LLM:
     messages: preset_text
     topP: 0.8
     topK: 0
-    maxTokens: 2048
+    maxTokens: 1024
     temperature: 0.5
     repeatPenalty: 5.0
     stopBefore: [ ]
