--- a/config/config_api.yaml
+++ b/config/config_api.yaml
@@ -1,4 +1,4 @@
 API:
-  API_KEY: "Bearer <Your API KEY>"
-  REQUEST_ID: "<Your REQUEST_ID>"
+  API_KEY: "Bearer nv-4dbb783261754845a74ad84277b7008acAWT"
+  REQUEST_ID: "36bd9d5373b249698b1b9a43373b58d2"
   HOST_URL: "https://clovastudio.stream.ntruss.com"
