--- a/config/config_api.yaml
+++ b/config/config_api.yaml
@@ -1,4 +1,4 @@
 API:
-  API_KEY: "Bearer <Your API KEY>"
-  REQUEST_ID: "<Your REQUEST_ID>"
+  API_KEY: "Bearer <Your API Key>"
+  REQUEST_ID: "<Your Request ID>"
   HOST_URL: "https://clovastudio.stream.ntruss.com"
