--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,21 @@ cython_debug/
 # Mac
 **/.DS_Store
 .vscode/settings.json
+
+# Airflow 관련 환경 설정 파일들
+RL/airflow/airflow-webserver.pid
+RL/airflow/airflow.cfg
+RL/airflow/airflow.db
+RL/airflow/webserver_config.py
+
+# 로그 파일들
+RL/airflow/logs/
+RL/airflow/dags/logs/
+
+# 실행 결과로 생성된 데이터
+RL/airflow/dags/hyperclovax_ab_feedback_dataset.csv
+RL/airflow/hyperclovax_ab_feedback_dataset.csv
+
+RL/airflow/dags/config.py
+
+
