Feat]clap, wav2clip 코드 구현

--- a/T2M_reseacrh/config.yaml
+++ b/T2M_reseacrh/config.yaml
@@ -3,8 +3,8 @@ novels:
   - Buja
   - onlylevel
   - knife_fight
-# output_dir: "generated_music"
-output_dir: "sep_music"
+output_dir: "generated_music"
+# output_dir: "sep_music"
 num_samples_per_prompt: 3
 summary_dir: "summaries"
 duration_sec: 30
