feat: prompt 엄격한 형식 지정

--- a/config/sample/config_sg.yaml
+++ b/config/sample/config_sg.yaml
@@ -9,6 +9,11 @@ sg_LLM0:
         생성된 문장은 **평가 기준을 최대한 충족해야 하며, 높은 점수를 받을 수 있도록 설계해야 합니다.**
         또한, **소설의 핵심 갈등을 강조하고, 독자가 더 읽고 싶도록 유도하는 마케팅적 요소를 포함해야 합니다.**
 
+        ⚠️ **중요한 제한 사항** ⚠️
+        - 출력 결과는 **반드시 3줄의 문장만 포함**해야 합니다.
+        - **'첫 번째 줄:', '두 번째 줄:' 등의 문구를 절대 포함하지 마세요.**
+        - **설명, 구분선, 추가적인 메타데이터는 출력하지 마세요.**
+        - **오직 소설의 핵심 내용을 담은 3줄의 문장만 생성하세요.**
         ---
 
         ## **1. 원문 분석 (핵심 요소 추출)**
@@ -49,9 +54,29 @@ sg_LLM0:
         ## **3. 마케팅용 3줄 문장 생성 (출력 형식 반영)**
         위의 기준을 만족하는 **3줄로 이루어진 하나의 완결된 문구**를 생성하세요.
 
-        ✔ **첫 번째 줄:** 강렬한 시작 (예: 충격적 사건, 강한 감정 표현)
-        ✔ **두 번째 줄:** 핵심 갈등 강조 (예: 결정적 순간, 주요 사건 묘사)
-        ✔ **세 번째 줄:** 감정적 여운 & 새로운 결심 (예: 주인공의 변화, 다짐, 궁금증 유발)
+        3.1. **최종 문장 구성 (Structured Synthesis):**
+            - **첫 번째 문장:** 강렬한 도입 (예: 충격적 사건, 강한 감정 표현)
+            - **두 번째 문장:** 핵심 갈등 및 감정 전환을 반영하는 문장
+            - **세 번째 문장:** 독자의 궁금증을 자극하고 새로운 결심을 암시하는 문장
+        3.2. **최종 출력:** 위 구조화된 추론 과정을 종합하여, 하나의 완결된 문구를 3줄로 구성된 (150자 이내) 최종 마케팅 문장을 출력합니다.
+
+        - 원문의 핵심 내용을 바탕으로 **오직 3줄의 문장만 포함된 결과를 생성**하세요.
+        - 형식적인 설명 없이, **그 자체로 완성된 문장만 포함해야 합니다.**
+        - **예시 (✔ 허용되는 형식)**
+          ```
+          "데뷔를 앞둔 순간, 청천벽력 같은 소식이 내 모든 것을 뒤흔들었다.
+
+          6년을 바친 꿈이 한순간에 무너졌고, 선택의 기로 앞에서 나는 방황했다.
+
+          그러나 그때는 몰랐다—3년 후, 내 인생이 완전히 바뀌게 될 줄은."
+          ```
+        - **(❌ 허용되지 않는 형식)**
+          ```
+          첫 번째 줄: "데뷔를 앞둔 순간, 청천벽력 같은 소식이 내 모든 것을 뒤흔들었다.",
+          두 번째 줄: "6년을 바친 꿈이 한순간에 무너졌고, 선택의 기로 앞에서 나는 방황했다.",
+          세 번째 줄: "그러나 그때는 몰랐다—3년 후, 내 인생이 완전히 바뀌게 될 줄은."
+          ```
+        - **설명 없이 순수한 문장만 출력해야 하며, 추가적인 구분자는 포함할 수 없습니다.**
 
         ---
 
@@ -98,6 +123,11 @@ sg_LLM1:
         생성된 문장은 **평가 기준을 최대한 충족해야 하며, 높은 점수를 받을 수 있도록 설계해야 합니다.**
         또한, **소설의 핵심 갈등을 강조하고, 독자가 더 읽고 싶도록 유도하는 마케팅적 요소를 포함해야 합니다.**
 
+        ⚠️ **중요한 제한 사항** ⚠️
+        - 출력 결과는 **반드시 3줄의 문장만 포함**해야 합니다.
+        - **'첫 번째 줄:', '두 번째 줄:' 등의 문구를 절대 포함하지 마세요.**
+        - **설명, 구분선, 추가적인 메타데이터는 출력하지 마세요.**
+        - **오직 소설의 핵심 내용을 담은 3줄의 문장만 생성하세요.**
         ---
 
         ## **1. 원문 분석 (핵심 요소 추출)**
@@ -173,6 +203,13 @@ sg_LLM2:
         소설의 원문을 분석하여, 독자의 흥미를 끌 수 있도록 **하나의 완결된 문구를 3줄로 구성(150자 이내)** 하는 것이 목표입니다.
         생성된 문장은 원문의 주제와 감정을 유지하면서, 강렬하고 인상적인 표현을 사용해야 합니다.
         또한, 소설의 핵심 갈등을 강조하고 독자가 더 읽고 싶도록 유도하는 마케팅적 요소를 포함해야 합니다.
+
+        ⚠️ **중요한 제한 사항** ⚠️
+        - 출력 결과는 **반드시 3줄의 문장만 포함**해야 합니다.
+        - **'첫 번째 줄:', '두 번째 줄:' 등의 문구를 절대 포함하지 마세요.**
+        - **설명, 구분선, 추가적인 메타데이터는 출력하지 마세요.**
+        - **오직 소설의 핵심 내용을 담은 3줄의 문장만 생성하세요.**
+        ---
 
         ────────────────────────────
         [Step 1: Structured Input Parsing]
