--- a/T2M_reseacrh/config.yaml
+++ b/T2M_reseacrh/config.yaml
@@ -1,6 +1,6 @@
 # config.yaml
-input_csv: "input_text.csv"      # CSV 파일 경로 (컬럼: id, musicgen_input_text)
-output_dir: "output"             # 출력 wav 파일을 저장할 디렉토리
+input_csv: "refined_data/contrasted_like_input_text.csv"      # CSV 파일 경로 (컬럼: id, musicgen_input_text)
+output_dir: "generated_music/like"             # 출력 wav 파일을 저장할 디렉토리
 num_samples_per_prompt: 3        # 각 프롬프트당 생성할 샘플 수
 duration_sec: 30                 # 생성할 음악 길이 (초)
 model_size : "large"
