--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,12 @@ cryptography==41.0.5
 # 로깅
 logging==0.5.1.2
 requests==2.32.3
-
 matplotlib==3.10.0
 
 # Apache Airflow 및 AWS S3 연동 패키지
 apache-airflow==2.7.2
 apache-airflow[amazon]
 
+pandas==2.2.3
+seaborn==0.13.2
+audiocraft==1.3.0
